fix search results overflow-y

--- a/src/components/Items.module.css
+++ b/src/components/Items.module.css
@@ -7,6 +7,7 @@
   position: relative;
   max-height: 100%;
   overflow-y: auto;
+  padding-bottom: 1em;
 }
 
 .header {
