--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -5,6 +5,9 @@
   flex: 1;
   background: gray93;
   position: relative;
+  max-height: 100%;
+  overflow-y: auto;
+  padding-bottom: 1em;
 }
 
 .search {
